fixed overflow css prob

--- a/attr_reader/app/assets/stylesheets/application.css
+++ b/attr_reader/app/assets/stylesheets/application.css
@@ -16,7 +16,6 @@
 
 body{
   background: #fafafa;
-  overflow: hidden;
 }
 
 footer {
